--- a/hello/vanilla/manifest.json
+++ b/hello/vanilla/manifest.json
@@ -1,10 +1,35 @@
 {
-    "manifest_version": 3,
-    "name": "Hello",
-    "description": "My first extension",
-    "version": "1.0",
-    "action": {
-      "default_popup": "hello.html",
-      "default_icon": "icon.png"
+  "manifest_version": 3,
+  "name": "Hello",
+  "description": "My first extension",
+  "version": "1.0",
+  "action": {
+    "default_icon": "icon.png"
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "content.js"
+      ],
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
+    }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+B",
+        "mac": "Command+B"
+      }
     }
   }
+}
