--- a/dimensions/manifest.json
+++ b/dimensions/manifest.json
@@ -11,7 +11,8 @@
         "128": "images/icon128.png"
     },
     "background": {
-        "service_worker": "service-worker.js"
+        "service_worker": "service-worker.js",
+        "type": "module"
     },
     "commands": {
         "_execute_action": {
@@ -31,6 +32,7 @@
     },
     "permissions": [
         "activeTab",
-        "scripting"
+        "scripting",
+        "offscreen"
     ]
 }
